Finish Hotel page